--- a/front_end/package.json
+++ b/front_end/package.json
@@ -11,6 +11,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "datatables.net": "^2.0.0",
+    "datatables.net-dt": "^2.0.0",
+    "datatables.net-select-dt": "^2.0.0",
     "jquery": "^3.7.1",
     "moment": "^2.30.1",
     "numeral": "^2.0.6",
@@ -20,6 +23,7 @@
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "react-table": "^7.8.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
