--- a/front_end/package.json
+++ b/front_end/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^41.2.0",
+    "@ckeditor/ckeditor5-react": "^6.2.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
@@ -12,6 +14,8 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.14.2",
     "axios": "^1.6.7",
+    "ckeditor4": "^4.24.0",
+    "ckeditor4-react": "^5.1.0",
     "datatables.net": "^2.0.0",
     "datatables.net-dt": "^2.0.0",
     "datatables.net-select-dt": "^2.0.0",
