--- a/front_end/package.json
+++ b/front_end/package.json
@@ -14,16 +14,20 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.14.2",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
     "ckeditor4": "^4.24.0",
     "ckeditor4-react": "^5.1.0",
     "datatables.net": "^2.0.0",
     "datatables.net-dt": "^2.0.0",
     "datatables.net-select-dt": "^2.0.0",
+    "i18next": "^23.11.3",
     "jquery": "^3.7.1",
     "moment": "^2.30.1",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.1",
+    "react-intl": "^6.6.6",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
