--- a/front_end/package.json
+++ b/front_end/package.json
@@ -28,6 +28,7 @@
     "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-i18next": "^14.1.1",
     "react-intl": "^6.6.6",
     "react-paginate": "^8.2.0",
